--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -15,9 +15,9 @@ jobs:
         dotnet-version: 2.2.108
     - name: Pack with dotnet
       #run: dotnet build --configuration Release
-      run: dotnet pack --configuration Release -o nupkg 
+      run: dotnet pack --configuration Release -o ./nupkg 
       
     - name: Push to NuGet
-      run: dotnet nuget push nupkg\*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://nuget.org
+      run: dotnet nuget push ./nupkg/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://nuget.org
       
       
